# NodeSynth

./: .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml
docs/: AUTHORING-PRESETS.md  BACKLOG.md  MIDI-LEARN.md  PLAN-ARPEGGIATOR.md  PLAN-EFFECTS-ROADMAP.md  PLAN-MIDI-CC.md  PLAN-MIDI-LEARN.md  PLAN-MOD-MATRIX.md  PLAN-PHASE-2.md  PLAN-PHASE-3-VOICES.md  PLAN-PHASE-3.md  PLAN-PHASE-4.5.md  PLAN-PHASE-4.md  PLAN-PHASE-5.md  PLAN-PHASER.md  PLAN-SID-PLAYER.md  PLAN-SUBGRAPHS.md  PLAN-VOCODER.md  PLAN-WAVETABLES.md  PLAN.md  PROPOSAL-VIRTUAL-KEYBOARD.md  SID-PLAYER-INVESTIGATION.md  SID-PLAYER.md
presets/Bass/: Acid Saw.json  Gritty Bass.json  Square Sub.json  Stepped LFO Bass.json  Wobble Bass.json
presets/FX/: Acid Sequence.json  Auto-Pan Pluck.json  Bell Tone.json  Crushed Stab.json  Dub Stab.json  Filter Bell.json  Glitch Storm.json  Pitch Storm.json  Pluck.json  Vocoder Talk.json
presets/Init/: Init Patch.json
presets/Lead/: CC Filter Lead.json  Filter Sweep Lead.json  Phased Lead.json  Saw Lead.json  Square Lead.json  Stutter Lead.json  Subgraph Demo.json  Super Saw.json  Tremolo Lead.json  Wavetable Lead.json
presets/Pad/: Drone Choir.json  Lush Pad.json  Mastered Pad.json  Matrix Routing Pad.json  Soft Pad.json  String.json  Wavetable Drift.json  Wide Pad.json
presets/Sequenced/: Arp Pluck.json
src/: main.cpp
src/audio/: MicRing.h
src/dsp/: Add.h  Adsr.h  Arpeggiator.h  Biquad.h  Constant.h  Delay.h  Exciter.h  Gain.h  GateButton.h  Lfo.h  Limiter.h  MicInput.cpp  MicInput.h  MidiInput.cpp  MidiInput.h  Multiply.h  Node.h  NoteSink.h  Oscillator.h  Output.h  Oversampler.h  Phaser.h  Reverb.h  SampleHold.h  Scale.h  Sequencer.h  SidPlayer.cpp  SidPlayer.h  Subgraph.h  Svf.h  Tremolo.h  Vca.h  VirtualKeyboard.h  Vocoder.h  VoiceAllocator.h  Waveshaper.h  Wavetable.cpp  Wavetable.h  WavetableOscillator.h
src/dsp/internal/: Fft.h  SubgraphBoundary.h
src/graph/: AudioCommand.h  EditHistory.cpp  EditHistory.h  Graph.cpp  Graph.h  SubgraphDefinition.h  SubgraphOps.cpp  SubgraphOps.h
src/io/: GraphJson.cpp  GraphJson.h  PatchSerializer.cpp  PatchSerializer.h  SidBrowser.h  SubgraphBrowser.cpp  SubgraphBrowser.h  SubgraphSerializer.cpp  SubgraphSerializer.h
src/midi/: MidiDeviceManager.cpp  MidiDeviceManager.h  MidiRing.h
src/sid/: PsidLoader.h  SidEmulator.cpp  SidEmulator.h
src/src_backup/: NodeSynthImConfig.h  main.cpp
src/src_backup/dsp/: Adsr.h  AutoPan.h  Biquad.h  Bitcrusher.h  Chorus.h  Clock.h  Compressor.h  Constant.h  DcBlocker.h  Delay.h  Envelope.h  Equalizer.h  Flanger.h  Gate.h  HaasWidener.h  Meter.h  MidiCC.h  Mixer.h  ModulationMatrix.h  Multiply.h  Node.h  Output.h  Reverb.h  RingMod.h  SampleHold.h  Scope.h  SidPlayer.cpp  SidPlayer.h  Smoother.h  StereoWidener.h  Svf.h  Vca.h  WavetableOscillator.h
src/src_backup/dsp/internal/: VoiceMixer.h
src/src_backup/graph/: AudioCommand.h  EditHistory.cpp  EditHistory.h
src/src_backup/io/: PatchSerializer.cpp  PresetBrowser.cpp  PresetBrowser.h  SidBrowser.cpp  WavetableBrowser.cpp  WavetableBrowser.h
src/src_backup/midi/: MidiDeviceManager.h  MidiRing.h
src/src_backup/sid/: PsidLoader.cpp  SidEmulator.cpp  SidRegisters.h
src/src_backup/ui/: AdsrUI.cpp  AdsrUI.h  Editor.cpp  Editor.h  KeyboardPanel.h  MidiCCUI.cpp  MidiCCUI.h  NodeIcons.h  NodeRegistry.h  Palette.h  ScopeUI.h  SequencerUI.cpp  SequencerUI.h  SidPlayerUI.cpp  SidPlayerUI.h  WavetableUI.cpp
src/ui/: AdsrUI.cpp  Editor.cpp  Editor.h  KeyboardPanel.cpp  MeterUI.cpp  MeterUI.h  MicInputUI.cpp  MicInputUI.h  MidiInputUI.cpp  MidiInputUI.h  ModMatrixUI.cpp  ModMatrixUI.h  NodeIcons.cpp  NodeIcons.h  NodeRegistry.cpp  NodeRegistry.h  Palette.cpp  ScopeUI.cpp  SequencerUI.cpp  SidPlayerUI.cpp  VirtualKeyboardUI.cpp  VirtualKeyboardUI.h  WavetableUI.h
subgraphs/: StereoFilter.nspg
tests/: Arpeggiator.test.cpp  AudioCommand.test.cpp  Character.test.cpp  ChorusFlanger.test.cpp  Clone.test.cpp  Delay.test.cpp  Dynamics.test.cpp  EditHistory.test.cpp  EmitPresets.test.cpp  EmitSubgraphs.test.cpp  EmitWavetables.test.cpp  Equalizer.test.cpp  Graph.test.cpp  Lfo.test.cpp  MathNodes.test.cpp  MicInput.test.cpp  MidiCC.test.cpp  MidiCc.test.cpp  MidiMapping.test.cpp  MidiRing.test.cpp  Mixer.test.cpp  ModulationMatrix.test.cpp  Oscillator.test.cpp  Oversampler.test.cpp  Partition.test.cpp  PatchSerializer.test.cpp  PerVoice.test.cpp  Phaser.test.cpp  PsidLoader.test.cpp  Reverb.test.cpp  ScopeMeter.test.cpp  Sequencer.test.cpp  SidEmulator.test.cpp  SidPlayer.test.cpp  Smoother.test.cpp  Subgraph.test.cpp  SubgraphExpand.test.cpp  Svf.test.cpp  TremoloAutoPan.test.cpp  VcaAdsr.test.cpp  (+5 more)
